Fix Dark MOde of Navbar

--- a/styles/darkMode.css
+++ b/styles/darkMode.css
@@ -1,3 +1,34 @@
+/* Navbar */
+nav {
+  display: block;
+  background-color: #ffffff;
+  align-items: center;
+  height: 85px;
+  width: 100%;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  z-index: 1;
+}
+
+nav.dark {
+  width: 100%;
+  background-color: #21222a;
+}
+
+.nav--logo_icon {
+  width: 30px;
+  margin-right: 10px;
+}
+
+.nav--logo_text {
+  color: #61dafb;
+  margin-right: auto;
+}
+
+.nav--title {
+  color: #deebf8;
+}
+
+/* Toggle */
 .toggler {
     display: flex;
     align-items: center;
@@ -48,4 +79,12 @@
   
   .toggler--dark {
     color: #d5d4d8;
+  }
+  
+  nav.dark .toggler-dark {
+    color: #ffffff;
+  }
+  
+  nav.dark .toggler--slider {
+    justify-content: flex-end;
   }
